[package]
authors = ["aljun <gagasalamer@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
name = "horajs"
readme = "README.md"
version = "0.1.4"

description = "Hora Search Everywhere"
homepage = "https://horasearch.com"
repository = "https://github.com/hora-search/hora-wasm"

categories = ["algorithms", "data-structures", "wasm"]
keywords = ["intelligence", "neighbor", "SIMD", "search", "distance"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = {version = "0.2.9", features = ["js"]}
console_error_panic_hook = { version = "0.1.7", optional = true }
real_hora = {package = "hora", version = "0.1.1", features=["no_thread"]}
wasm-bindgen = "0.2.84"

[dev-dependencies]
futures = "0.3.16"
js-sys = "0.3.52"
wasm-bindgen-test = "0.3.25"
