[package]
authors = ["aljun <gagasalamer@outlook.com>"]
edition = "2021"
license = "Apache-2.0"
name = "horajs"
readme = "README.md"
version = "0.1.4"

description = "Hora Search Everywhere"
homepage = "https://horasearch.com"
repository = "https://github.com/jonluca/hora-wasm"

categories = ["algorithms", "data-structures", "wasm"]
keywords = ["intelligence", "neighbor", "SIMD", "search", "distance"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level= 3
strip = "none"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']


[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = {version = "0.2.9", features = ["js"]}
console_error_panic_hook = { version = "0.1.7", optional = true }
hora_new = {package = "hora-new", version = "0.0.3", features=["packed_simd"]}
wasm-bindgen = "0.2.84"

[dev-dependencies]
futures = "0.3.28"
js-sys = "0.3.61"
wasm-bindgen-test = "0.3.34"
